--- a/src/globals.css
+++ b/src/globals.css
@@ -24,3 +24,8 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* When on dashboard pages we add .hide-site-header on body to hide the main site header */
+body.hide-site-header .site-main-header {
+  display: none !important;
+}
