--- a/src/globals.css
+++ b/src/globals.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
-:root {
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -23,7 +23,7 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
 
 /* When on dashboard pages we add .hide-site-header on body to hide the main site header */
 body.hide-site-header .site-main-header {
