--- a/src/globals.css
+++ b/src/globals.css
@@ -1,4 +1,6 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 /* When on dashboard pages we add .hide-site-header on body to hide the main site header */
 body.hide-site-header .site-main-header {
